Fixed crash when modifying the chart type. Patch contributed by Peter Pointner and modified to make sure settings are applied in all cases.

Anyway, charts seem to be a work in progress. So expect more bugs and more fixes.

BUG:220941

svn path=/trunk/playground/office/kmymoney/; revision=1079798